catkin_ws/logs/backend/build.make.751.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:247:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:245:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::keyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> keyFrameFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: error: no match for ‘operator=’ (operand types are ‘boost::shared_ptr<bool>’ and ‘bool*’)
  badFrameFlag = new bool;
               ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note: candidates are:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:505:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<T>&) [with T = bool]
     shared_ptr & operator=( shared_ptr const & r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:505:18: note:   no known conversion for argument 1 from ‘bool*’ to ‘const boost::shared_ptr<bool>&’
/usr/include/boost/smart_ptr/shared_ptr.hpp:514:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<Y>&) [with Y = Y; T = bool]
     shared_ptr & operator=(shared_ptr<Y> const & r) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:514:18: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note:   mismatched types ‘const boost::shared_ptr<X>’ and ‘bool*’
  badFrameFlag = new bool;
               ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:525:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&) [with Y = Y; T = bool]
     shared_ptr & operator=( std::auto_ptr<Y> & r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:525:18: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note:   mismatched types ‘std::auto_ptr<Y>’ and ‘bool*’
  badFrameFlag = new bool;
               ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:534:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&&) [with Y = Y; T = bool]
     shared_ptr & operator=( std::auto_ptr<Y> && r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:534:18: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note:   mismatched types ‘std::auto_ptr<Y>’ and ‘bool*’
  badFrameFlag = new bool;
               ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:556:18: note: template<class Y, class D> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::unique_ptr<_Up, _Ep>&&) [with Y = Y; D = D; T = bool]
     shared_ptr & operator=( std::unique_ptr<Y, D> && r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:556:18: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note:   mismatched types ‘std::unique_ptr<_Tp, _Dp>’ and ‘bool*’
  badFrameFlag = new bool;
               ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:592:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<T>&&) [with T = bool]
     shared_ptr & operator=( shared_ptr && r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:592:18: note:   no known conversion for argument 1 from ‘bool*’ to ‘boost::shared_ptr<bool>&&’
/usr/include/boost/smart_ptr/shared_ptr.hpp:599:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<Y>&&) [with Y = Y; T = bool]
     shared_ptr & operator=( shared_ptr<Y> && r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:599:18: note:   template argument deduction/substitution failed:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:27:15: note:   mismatched types ‘boost::shared_ptr<X>’ and ‘bool*’
  badFrameFlag = new bool;
               ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frame.h:13:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Frame.cpp:7:
/usr/include/boost/smart_ptr/shared_ptr.hpp:609:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::detail::sp_nullptr_t) [with T = bool; boost::detail::sp_nullptr_t = std::nullptr_t]
     shared_ptr & operator=( boost::detail::sp_nullptr_t ) BOOST_NOEXCEPT // never throws
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:609:18: note:   no known conversion for argument 1 from ‘bool*’ to ‘boost::detail::sp_nullptr_t {aka std::nullptr_t}’
make[2]: *** [CMakeFiles/frontend.dir/src/Frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
